# Myteacher-AI

./: .env.example  README.md  pyproject.toml  streamlit_app.py
ai_tutor/: admin.py  models.py  serializers.py  urls.py  views.py
ai_tutor/agents/: workflow.py
ai_tutor/decomposer/: graph.py  repository.py
ai_tutor/input_layer/: normalizer.py
ai_tutor/migrations/: 0001_initial.py
ai_tutor/schemas/: decomposer.py  normalized_query.py  workflow.py
ai_tutor/services/: azure_clients.py  logging.py
config/: settings.py  urls.py
tests/: test_api.py
